2010-06-01  Chris Waterson  <waterson@maubi.net>

	* Database/HDBC/MySQL/Connection.hsc.  Add runRaw, patch from Rune
	Harder Bak <rune@bak.dk>.

2010-04-16  Chris Waterson  <waterson@maubi.net>

	* HDBC-mysql-0.6.2.  Fix incorrect usage of "with" and
	"withCString" to allocate buffers for libmysqlclient.  Send
	SqlString data as UTF-8 encoded byte strings; return string data
	as SqlByteStrings.

2009-03-01  Chris Waterson  <waterson@maubi.net>

	* HDBC-mysql-0.6.1.  Expose Connection type.

2009-06-05  Chris Waterson  <waterson@maubi.net>

	* HDBC-mysql-0.6. Use Foreign.Concurrent to correctly incorporate
	Haskell finalizer for binds.  Fix handling of SqlWord32 and
	SqlWord64 values: tip o' the cap to yeoh@cs.wisc.edu.

2009-03-02  Chris Waterson  <waterson@maubi.net>

	* HDBC-mysql-0.5. Use "throwSqlError" instead of "throwDyn" so
	that we get legible errors under ghc-6.10.  This also removes the
	dependency on base 3.

2009-02-26  Chris Waterson  <waterson@maubi.net>

	* HDBC-mysql-0.4. Fix incorrect binding size (should always be 4
	bytes, not compiler's "long") for MYSQL_TYPE_LONG columns.

2009-02-18  Chris Waterson  <waterson@maubi.net>

	* HDBC-mysql-0.3 Deal with some of the problems where statements
	would mysteriously "close".  It turns out that only one statement
	can be "active" on a connection at a time, and that closing an
	inactive statement causes the current statement to close as well.

2009-02-14  Chris Waterson  <waterson@maubi.net>

	* HDBC-mysql-0.2 Fix binding width for dates: MySQL's length
	indicates 19 characters (which is the length of the string), but
	we need the full size of the MYSQL_TIME struct.  Leak connections
	and statements until I can figure out how to keep the ForeignPtr's
	alive.
